src/components/Carousel/Carousel.module.css
.carouselWrapper {
  position: relative;
}

.carouselWrapperMaximized {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 2;

  width: 100vw;
  height: 100vh;
  background-color: #fff;
}

.carousel {
  width: 100%;
  height: 100%;
  overflow: hidden;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  touch-action: manipulation;
  box-sizing: border-box;
}

.galleryCarousel {
  background-color: #000;
}

